--- a/ToDo
+++ b/ToDo
@@ -1,1 +1,11 @@
 TODOS
+
+Hannes: Login Screen mit Datenbankverknüpfung
+
+Philipp: NavigationBar
+
+Nils: Unteres Menü
+
+
+
+im Verbund: Startbildschirm
