--- a/ToDo
+++ b/ToDo
@@ -2,9 +2,9 @@ TODOS
 
 Hannes: Login Screen mit Datenbankverknüpfung
 
-Philipp: NavigationBar
+Philipp: Unteres Menü
 
-Nils: Unteres Menü
+Nils: Linkes Menü
 
 
 
